plants/style.css
/* ... */
.button:hover {
    background-color: #E06733;
    color: #FFFFFF;
    cursor: pointer;
}

.button_welcome {
    border: 2px solid #E06733;
    border-radius: 10px;
    width: 158px;
    height: 44px;
    font-family: Inter, sans-serif;
    font-size: 16px;
    color: #000000;
    background-color: #FFFFFF00;

}

.button_welcome:hover {
    background-color: #E06733;
    color: #FFFFFF;
    cursor: pointer;
}

.button_price {
    border: 1px solid #E06733;
    border-radius: 5px;
    width: 162px;
    height: 50px;
    font-family: Inika, sans-serif;
    font-weight: bold;
    font-size: 20px;
    color: #E06733;
    background-color: #FFFFFF00;

}

.button_price:hover {
    background-color: #E06733;
    color: #FFFFFF;
    cursor: pointer;
}

.bold {
    font-weight: 700;
}

/* HEADER  */

.header {
    background-color: #EDF2EC;
    font-family: Inika, sans-serif;
    font-size: 16px;
    color: #000000;
}

.header_block {
    max-width: 1440px;
    height: 134px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.header_content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-basis: 84.86%;
}

.hamburger {
    display: none;
}

.bar {
    display: block;
    width: 40px;
    height: 2px;
    margin: 6px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #717171;
}

.header_navigation {
    list-style: none;
    display: flex;
    flex-basis: 37%;
    justify-content: space-between;
}

.header_navigation_list {
    padding: 0;
    margin: 0;
    list-style: none;
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.header_navigation_list li a:hover {
    color: #E06733;
}

li {
    list-style: none;
    display: inline-block;
}

.header_navigation a {
    color: #010201;
    text-decoration: none;
}

/* WELCOME SECTION */

.welcome {
    background-color: #EDF2EC;
    font-family: Inter, sans-serif;
    font-weight: 400;
    font-size: 20px;
    line-height: 35px;
    color: #636060;
}

.welcome_block {
    max-width: 1440px;
    margin: auto;
    padding: 62px 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.welcome_content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-basis: 84.86%;
}

.welcome_content picture {
    max-width: 449px;
    max-height: 407px;
}

.welcome_content_right {
    display: flex;
    flex-direction: column;
    flex-basis: 44.92%;
    height: 340px;
    justify-content: space-between;
}

.welcome_content_right p {
    margin: 0;
}

.welcome_header {
    margin: 0;
    font-size: 45px;
    font-weight: 700;
    line-height: 50px;
    color: #717171;
    margin-top: 2px;
}

.about_h2 {
    font-family: Inika, sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 40px;
    line-height: 52px;
    color: #499A18; 
    max-width: 463px;
    margin: 20px 0px 38px 0px;
}

/* MAIN */

.about {
    background-color: #FFFFFF;
    font-family: Inter, sans-serif;
    font-weight: 400;
    font-size: 20px;
    line-height: 30px;
    color: #636060;
}

.about_block {
    max-width: 1440px;
    margin: auto;
    padding: 94px 0px 86px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.about_content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-basis: 84.86%;
}

.about_content picture {
    max-height: 479px;
}

.about_content_left {
    flex-basis: 49.6%;
}

.service {
    background-color: #EDF2EC;
}

.service_block {
    max-width: 1440px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.service_content {
    display: flex;
    flex-direction: column;
    flex-basis: 84.86%;
}

.service_header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding-top: 40px;
    padding-bottom: 80px;
}

.service_header_text {
    max-width: 306px;
    font-family: Inika, sans-serif;
    font-weight: 400;
    font-size: 40px;
    line-height: 52px;
    color: #499A18;
    padding-right: 142px;
    margin: 0;
}

.service_header_nav {
    display: flex;
    justify-content: space-between;
    width: 559px;
    padding: 0;
    margin: 0;
}

.service_cards_container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-content: space-between;
    padding-bottom: 66px;
}

.service_card {
    max-width: 330px;
    max-height: 450px;
    margin-bottom: 55px;
}
.service_card_text {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    margin-top: -5px;
    border: 1px solid #E3E1D5;
    border-radius: 0px 0px 20px 20px;
    padding-top: 10px;
    font-family: Inter, sans-serif;
    font-size: 20px;
    font-weight: bold;
}

.service_card_text p {
    margin-top: 12px;
    margin-bottom: 36px;
    font-family: Inter, sans-serif;
    font-weight: 400;
    font-size: 16px;
    color: #717171;
}

.price {
    background-color: #ffffff;
}

.price_block {
    max-width: 1440px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.price_content {
    display: flex;
    justify-content: space-between;
    flex-basis: 84.86%;
    margin-top: 40px;
    margin-bottom: 113px;
}

.price_content_left {
    display: flex;
    flex-direction: column;
    font-family: Inter, sans-serif;
    margin-top: -2px;
}

.price_content_left h2 {
    font-size: 40px;
    font-weight: 700;
    margin: 0px 0px 60px 0px;
}

.price_items_block {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: stretch;
    gap: 32px;
    border: 1px solid #E3E1D5;
    border-radius: 20px;
    margin: 0;
    padding: 34px 41px;
}
/* ... */

